# petal-metal

./: DEMO_INSTRUCTIONS.md  README.md  agent-example.ipynb  bootstrap1.id  bootstrap2.id  client.py  connect_client.py  convert.sh  demo_client.py  distributed_swarm.py  flock_generator.py  gripcorduroyred.txt  local_agent.py  local_discovery.py  logging_utils.py  main.py  mandala_shader.glsl  max_patch_template.maxpat  model_manager.py  pattern_manager.py  peers.json  petal.py  process_lock.py  pyproject.toml  requirements.txt  run-local.sh  run-secondary.sh  run_local_server.py  run_server.py  run_server.sh  server.py  service_discovery.py  setup-mac.sh  shape_visualizer.py  simple_discovery.py  storyteller.py  swarm_vignettes.py  test_flock_generator.py  test_opengl.py  test_pattern_manager.py  (+3 more)
git_petals/src/petals/: data_structures.py
git_petals/src/petals/client/: model.py  remote_sequential.py
git_petals/src/petals/client/routing/: sequence_info.py  sequence_manager.py
git_petals/src/petals/server/: block_functions.py  config.py  handler.py  memory_cache.py  ping.py  reachability.py  run_local_server.py  run_server.py  server.py
git_petals/src/petals/utils/: __init__.py  convert_block.py  hf_auth.py  ping.py
templates/: app.js  index.html
tests/: mock_server.py  test_distributed_model.py
