[project]
name = "petal-2-metal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.0.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "hf-xet>=1.1.0",
]
